--- a/polybookexchange/templates/polybookexchange/base.html
+++ b/polybookexchange/templates/polybookexchange/base.html
@@ -116,6 +116,10 @@
                 &copy; Maximilien Cuony, based on Loïc Etienne and Aristidis Papaioannou's work - 2014 - <a href="http://opensource.org/licenses/BSD-2-Clause" target="_blank">BSD</a> - <a href="http://agepoly.epfl.ch">AGEPoly</a>/<a href="http://polylan.ch">PolyLAN</a> - <a href="https://github.com/PolyLAN/polybookexchange">{% trans "Fork me on Github!" %}</a>
                 <br />
                 Using <a href="https://www.djangoproject.com/" target="_blank">Django</a> with <a href="http://djangopony.com/" target="_blank">ponies and magic</a> and <a href="http://getbootstrap.com/" target="_blank">Bootstrap</a>.
+                {% if settings.VERSION %}
+                    <br />
+                    Version {{settings.VERSION}}
+                {% endif %}
 
             </div>
 
